--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Amine AI Creator</title>
-    </head>
+    <title>Amine API - Dashboard</title>
+    
+    <script src="https://quge5.com/88/tag.min.js" data-zone="212425" async data-cfasync="false"></script>
+    
+  </head>
   <body>
     <noscript>Vous devez activer JavaScript pour voir ce site.</noscript>
     <div id="root"></div>
