--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Amine API - Dashboard</title>
     
-    <script src="https://quge5.com/88/tag.min.js" data-zone="212425" async data-cfasync="false"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7526517043500512" crossorigin="anonymous"></script>
     
   </head>
   <body>
